--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.3.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
